# sql-builder

./: .gitignore  README.md  sql-builder.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  WSQL.hs
