name:                sql-builder
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/bag/sql-builder#readme
license:             BSD3
author:              Petr Vapenka
maintainer:          petr.vapenka@volny.cz
copyright:           2015 Petr Vapenka
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WSQL
  build-depends:       aeson
                     , base
                     , bytestring
                     , iso8601-time
                     , scientific
                     , text
                     , time
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

executable sql-builder-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , bytestring
                     , iso8601-time
                     , scientific
                     , sql-builder
                     , text
                     , time
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

test-suite sql-builder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , iso8601-time
                     , scientific
                     , sql-builder
                     , text
                     , time
                     , unordered-containers
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bagl/sql-builder
